--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	<div id="Stage" class="EDGE-938852 custom_stage">
 	</div>
 	<audio controls autoplay hidden="true">
-		<source src="./audio/sound.mp3" type="audio/mpeg">
+		<source src="audio/sound.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
-	<p class="teammates">2조 / 나유리, 김시준, 이영진</p>
+	<p class="teammates">범석 조</p>
 </body>
 </html>
