--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 		<source src="audio/sound.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
-	<p class="teammates">범석 조</p>
+	<p class="teammates">ブラウザでサウンドをご許可ください。ご許可なさらなければ、サウンドがきこえません。</p>
 </body>
 </html>
