--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 </head>
 <body>
-	<p class="title">취미는 사랑</p>
+	<p class="title">취미는 사랑（大学時代に参加したプロジェクトで開発した作品です。）</p>
 	<div id="Stage" class="EDGE-938852 custom_stage">
 	</div>
 	<audio controls autoplay hidden="true">
 		<source src="audio/sound.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
-	<p class="teammates">ブラウザでサウンドをご許可ください。ご許可なさらなければ、サウンドがきこえません。</p>
+	<p class="teammates">ブラウザでサウンドをご許可ください。ご許可なさらなければ、サウンドが聞こえません。</p>
 </body>
 </html>
