--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" charset="utf-8" src="wonderful_edgePreload.js"></script>
     <style>
 		@import url(http://fonts.googleapis.com/earlyaccess/nanumpenscript.css);
-        .edgeLoad-EDGE-938852 { visibility:hidden; }
+        /*.edgeLoad-EDGE-938852 { visibility:hidden;*/ }
     </style>
 <!--Adobe Edge Runtime End-->
 	<link href="wonderful.css" rel="stylesheet" type="text/css" />
