--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
 	<p class="title">취미는 사랑（大学時代に参加したプロジェクトで開発した作品です。）</p>
 	<div id="Stage" class="EDGE-938852 custom_stage">
 	</div>
-	<audio controls autoplay playsinline hidden="true">
+	<audio id="mp3" controls playsinline hidden="true">
 		<source src="audio/sound.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
 	<p class="teammates">画面をクリックしたらアニメが実行されます。</p>
 </body>
+<script>
+  $(windows).click(function() {
+	document.getElementById("id").play();
+  });
+</script>
 </html>
