--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 	<p class="teammates">画面をクリックしたら動画と歌が実行されます。</p>
 </body>
 <script>
-   document.getElementById("mp3").play();
+   $("#mp3").click(function() {
+      $("#mp3").play();
+   };
 </script>
 </html>
