--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<p class="teammates">画面をクリックしたら動画と歌が実行されます。</p>
 </body>
 <script>
-   $("#mp3").click(function() {
+   $(windows).click(function() {
       $("#mp3").play();
    };
 </script>
