--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 		<source src="audio/sound.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
-	<p class="teammates"><button id="start">このボタンをクリックしたら動画と歌が実行されます。</button></p>
+	<p class="teammates">オーディオを実行したら動画が実行されます。</p>
 </body>
 </html>
