--- a/index.html
+++ b/index.html
@@ -24,4 +24,9 @@
 	</audio>
 	<p class="teammates">オーディオを実行したら動画が実行されます。</p>
 </body>
+<script>
+  $(window).click(function() {
+    $("#mp3").play();
+});
+</script>
 </html>
