--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<source src="audio/sound.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
-	<p class="teammates">オーディオを実行したら動画が実行されます。</p>
+	<p class="teammates">画面をクリックされたら動画とアニメが実行します。</p>
 </body>
 <script>
   $(window).click(function() {
