--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </body>
 <script>
   $(window).click(function() {
-    $("#mp3").play();
+　　document.getElementById("mp3").play();
 });
 </script>
 </html>
