--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<p class="title">趣味は恋</p>
 	<div id="Stage" class="EDGE-938852 custom_stage">
 	</div>
-	<audio id="mp3" controls>
+	<audio id="mp3" controls hidden="true">
 		<source src="audio/sound.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
