--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>취미는 사랑</title>
 <!--Adobe Edge Runtime-->
     <script type="text/javascript" charset="utf-8" src="wonderful_edgePreload.js"></script>
-    <script type="text/javascript" charset="utf-8" src="jedge_includes/query-1.7.1.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="edge_includes/query-1.7.1.min.js"></script>
     <style>
 		@import url(http://fonts.googleapis.com/earlyaccess/nanumpenscript.css);
         .edgeLoad-EDGE-938852 { visibility:hidden; }
