--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<source src="audio/sound.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
-	<p class="teammates">画面をクリックされたら動画とアニメが実行します。</p>
+	<p class="teammates">画面をクリックされたら動画とアニメが実行します。<br/>スマホでは作動出来ません。パソコンでご覧ください</p>
 </body>
 <script>
   $(window).click(function() {
