--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-	<p class="title">趣味は愛（2013年のヨンセイ大学授業のプロジェクト）<br/> 録画された動画ではなくてJavascriptが絵と文字を動きます。</p>
+	<p class="title">趣味は愛（2013年のヨンセイ大学授業のプロジェクト）<br/> 録画された動画ではなくてJavascriptが絵と文字を動かします。</p>
 	<div id="Stage" class="EDGE-938852 custom_stage">
 	</div>
 	<audio id="mp3" controls hidden="true">
