--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<source src="audio/sound.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
-	<p class="teammates">画面をクリックされたらサウンドとアニメが実行します。<br/>スマホでは作動出来ません。パソコンでご覧ください <br/> ソースコードと詳しい説明はここにあります。<br/>https://github.com/beomseoklee90/animation</p>
+	<p class="teammates">画面をクリックされたらサウンドとアニメが実行されます。<br/>スマホでは作動出来ません。パソコンでご覧ください <br/> ソースコードと詳しい説明はここにあります。<br/>https://github.com/beomseoklee90/animation</p>
 </body>
 <script>
   $(window).click(function() {
